--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
+    <h1>Hello</h1>
+    <p>hello this is me making somthing.</p>
+    <p>im doing some stuff</p>
     <script src="script.js"></script>
   </body>
 </html>
